--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -5,13 +5,55 @@
    "execution_count": 1,
    "id": "03365850",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.11), please consider upgrading to the latest version (0.4.1).\n",
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/thedevastator/uncover-global-trends-in-mental-health-disorder?dataset_version_number=2...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1.24M/1.24M [00:00<00:00, 1.31MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n",
+      "Path to dataset files: C:\\Users\\eslmo\\.cache\\kagglehub\\datasets\\thedevastator\\uncover-global-trends-in-mental-health-disorder\\versions\\2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import kagglehub\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "path = kagglehub.dataset_download(\"thedevastator/uncover-global-trends-in-mental-health-disorder\")\n",
+    "\n",
+    "print(\"Path to dataset files:\", path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e74f4a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
