--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "0e74f4a1",
    "metadata": {},
    "outputs": [
@@ -183,13 +183,12 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/1- mental-illnesses-prevalence.csv\")\n",
-    "df.head()"
+    "df = pd.read_csv(\"data/1- mental-illnesses-prevalence.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "7cd6753a",
    "metadata": {},
    "outputs": [
@@ -214,13 +213,12 @@
     }
    ],
    "source": [
+    "df = pd.read_csv(\"data/1- mental-illnesses-prevalence.csv\")\n",
     "df.columns = [\n",
     "    \"Entity\",\"Code\",\"Year\",\n",
     "    \"Schizophrenia\",\"Depression\",\"Anxiety\",\"Bipolar\",\"Eating_disorders\"\n",
     "]\n",
     "\n",
-    "# Check first rows\n",
-    "print(df.head())\n",
     "numeric_cols = [\"Schizophrenia\",\"Depression\",\"Anxiety\",\"Bipolar\",\"Eating_disorders\",\"Year\"]\n",
     "for col in numeric_cols:\n",
     "    df[col] = pd.to_numeric(df[col], errors='coerce')"
@@ -228,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "e0a297e9",
    "metadata": {},
    "outputs": [
@@ -244,14 +242,11 @@
     }
    ],
    "source": [
-    "# Compute global average\n",
     "mean_prevalence = df[[\"Schizophrenia\",\"Depression\",\"Anxiety\",\"Bipolar\",\"Eating_disorders\"]].mean().sort_values()\n",
     "\n",
-    "# Plot\n",
     "plt.figure(figsize=(8,5))\n",
     "bars = plt.bar(mean_prevalence.index, mean_prevalence.values, color='skyblue')\n",
     "\n",
-    "# Add labels\n",
     "for bar in bars:\n",
     "    plt.text(bar.get_x() + bar.get_width()/2, bar.get_height()+0.02, f'{bar.get_height():.2f}', ha='center')\n",
     "\n",
@@ -263,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "fa6502f2",
    "metadata": {},
    "outputs": [
@@ -283,7 +278,6 @@
     "plt.figure(figsize=(10,6))\n",
     "plt.plot(df_yearly[\"Year\"], df_yearly[\"Eating_disorders\"], marker='o', color='crimson', linewidth=2)\n",
     "\n",
-    "# Add data labels\n",
     "for i, val in enumerate(df_yearly[\"Eating_disorders\"]):\n",
     "    if i % 2 == 0:\n",
     "        plt.text(df_yearly[\"Year\"].iloc[i], val + 0.001, f\"{val:.3f}\", ha='center', fontsize=9)\n",
@@ -495,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "19464c5d",
    "metadata": {},
    "outputs": [],
@@ -506,16 +500,13 @@
     "    \"40-44 years\",\"45-49 years\",\"50-54 years\",\"55+ years\"\n",
     "]\n",
     "\n",
-    "# Convert age_name column to categorical with this order\n",
     "df_sg['age_name'] = pd.Categorical(df_sg['age_name'], categories=age_order, ordered=True)\n",
-    "\n",
-    "# Sort by this categorical order\n",
     "df_sg = df_sg.sort_values('age_name')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "49f34060",
    "metadata": {},
    "outputs": [
@@ -531,30 +522,23 @@
     }
    ],
    "source": [
-    "# Ensure columns are lowercase\n",
     "df_sg.columns = [c.lower() for c in df_sg.columns]\n",
     "\n",
-    "# Filter for Eating disorders in Singapore\n",
     "df_ed = df_sg[df_sg[\"cause_name\"]==\"Eating disorders\"]\n",
     "\n",
-    "# Optional: pick the latest year to show current snapshot\n",
     "latest_year = df_ed[\"year\"].max()\n",
     "df_latest = df_ed[df_ed[\"year\"]==latest_year]\n",
     "\n",
-    "# Get unique age groups in order\n",
     "age_groups = df_latest[\"age_name\"].unique()\n",
     "\n",
     "plt.figure(figsize=(12,6))\n",
     "\n",
-    "# Plot male\n",
     "df_male = df_latest[df_latest[\"sex_name\"]==\"Male\"]\n",
     "plt.plot(age_groups, df_male[\"val\"], marker='o', linestyle='-', color='skyblue', label='Male')\n",
     "\n",
-    "# Plot female\n",
     "df_female = df_latest[df_latest[\"sex_name\"]==\"Female\"]\n",
     "plt.plot(age_groups, df_female[\"val\"], marker='o', linestyle='-', color='lightcoral', label='Female')\n",
     "\n",
-    "# Labels and title\n",
     "plt.xlabel(\"Age Group\")\n",
     "plt.ylabel(\"Number of Cases\")\n",
     "plt.title(f\"Singapore Eating Disorder Prevalence by Age Group ({int(latest_year)})\")\n",
