--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0b11bf36",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, f1_score\n",
+    "\n",
     "\n",
     "# Psychological stress is increasingly expressed in online communities, where individuals use platforms such as Reddit to seek advice, vent frustrations, or disclose emotional distress. \n",
     "# Detecting stress signals in such posts can support early intervention, moderator assistance, and mental health monitoring. \n",
@@ -171,9 +175,6 @@
     }
    ],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, f1_score\n",
     "\n",
     "# Vectorize text\n",
     "vectorizer = TfidfVectorizer(\n",
@@ -286,49 +287,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b3c2a0e1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Feature Importance Analysis (TF-IDF Model)\n",
+    "Feature Importance Analysis (TF-IDF Model)\n",
     "\n",
-    "# The top weighted features from the logistic regression classifier were examined to understand how the lexical model distinguishes stressed from non-stressed posts.\n",
+    "The top weighted features from the logistic regression classifier were examined to understand how the lexical model distinguishes stressed from non-stressed posts.\n",
     "\n",
-    "# Stress-Predictive Features\n",
+    "Stress-Predictive Features\n",
     "\n",
-    "# The most positively weighted features include terms such as “anxiety”, “anxious”, “scared”, “afraid”, and “hate”. \n",
-    "# These words clearly reflect negative emotional states and align strongly with psychological theories of stress, which emphasise anxiety, fear, and perceived loss of control.\n",
+    "The most positively weighted features include terms such as “anxiety”, “anxious”, “scared”, “afraid”, and “hate”. These words clearly reflect negative emotional states and align strongly with psychological theories of stress, which emphasise anxiety, fear, and perceived loss of control.\n",
     "\n",
-    "# Furthermore, the model also assigns high weight to more general conversational markers such as “feel”, “feeling”, “feel like”, and “don’t know”. \n",
-    "# These terms suggest that stressed posts may involve heightened introspection, uncertainty, and emotional processing. \n",
-    "# This indicates that the classifier is capturing not only explicit stress vocabulary but also stylistic and cognitive markers associated with distress.\n",
+    "Furthermore, the model also assigns high weight to more general conversational markers such as “feel”, “feeling”, “feel like”, and “don’t know”. These terms suggest that stressed posts may involve heightened introspection, uncertainty, and emotional processing. This indicates that the classifier is capturing not only explicit stress vocabulary but also stylistic and cognitive markers associated with distress.\n",
     "\n",
-    "# However, some highly weighted words (“just”, “don”) are common words, suggesting that the model may partially rely on stylistic patterns characteristic of stressed narratives rather than purely semantic stress indicators. \n",
-    "# This raises the possibility of over-reliance on surface-level linguistic cues.\n",
+    "However, some highly weighted words (“just”, “don”) are common words, suggesting that the model may partially rely on stylistic patterns characteristic of stressed narratives rather than purely semantic stress indicators. \n",
+    "This raises the possibility of over-reliance on surface-level linguistic cues.\n",
     "\n",
-    "# Non-Stress Predictive Features\n",
+    "Non-Stress Predictive Features\n",
     "\n",
-    "# The most negatively weighted features (predicting non-stress) include words such as “thank”, “great”, “amazing”, “good”, and “helped”, which reflect positive affect and constructive interactions.\n",
+    "The most negatively weighted features (predicting non-stress) include words such as “thank”, “great”, “amazing”, “good”, and “helped”, which reflect positive affect and constructive interactions.\n",
     "\n",
-    "# Additionally, terms such as “survey”, “url”, and “edit” suggest that informational or structured posts are less likely to be classified as stressed. \n",
-    "# This implies that emotionally expressive language plays a central role in the model’s stress predictions.\n",
+    "Additionally, terms such as “survey”, “url”, and “edit” suggest that informational or structured posts are less likely to be classified as stressed. This implies that emotionally expressive language plays a central role in the model’s stress predictions.\n",
     "\n",
     "\n",
-    "# Overall, the feature importance analysis suggests that the lexical model primarily detects stress through emotionally intense and self-focused language. \n",
-    "# While this aligns with psychological expectations, it also indicates that the model may struggle with subtle or indirectly expressed stress, particularly when explicit emotional markers are absent.\n",
+    "Overall, the feature importance analysis suggests that the lexical model primarily detects stress through emotionally intense and self-focused language. While this aligns with psychological expectations, it also indicates that the model may struggle with subtle or indirectly expressed stress, particularly when explicit emotional markers are absent.\n",
     "\n",
-    "# This analysis highlights the trade-off between interpretability and contextual understanding, motivating the comparison with more advanced contextual models such as BERT.\n",
+    "This analysis highlights the trade-off between interpretability and contextual understanding, motivating the comparison with more advanced contextual models such as BERT.\n",
     "\n",
-    "# (F1 = 0.74 for Stressed)\n",
-    "# While the model demonstrates reasonable predictive ability, there is room for improvement. \n",
-    "# The results suggest that lexical signals (TF-IDF features) capture the emotional intensity and cognitive markers of stress reasonably well but may not fully account for context or subtle expressions of distress.\n",
+    "(F1 = 0.74 for Stressed) While the model demonstrates reasonable predictive ability, there is room for improvement. The results suggest that lexical signals (TF-IDF features) capture the emotional intensity and cognitive markers of stress reasonably well but may not fully account for context or subtle expressions of distress.\n",
     "\n",
     "\n",
-    "# The model could be useful as a screening tool to flag potentially stressed posts for human review.\n",
+    "The model could be useful as a screening tool to flag potentially stressed posts for human review.\n",
     "\n",
-    "# Over-reliance on keywords (e.g., “anxiety”, “scared”) may lead to misclassifications in posts with subtle or indirect expressions of stress."
+    "Over-reliance on keywords (e.g., “anxiety”, “scared”) may lead to misclassifications in posts with subtle or indirect expressions of stress."
    ]
   },
   {
@@ -368,7 +360,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import f1_score\n",
+    "\n",
     "\n",
     "test['pred_tfidf'] = y_pred\n",
     "\n",
